gap at right side fixed on global page slider

--- a/stories/Templates/GlobalHomepage/globalhome-page.scss
+++ b/stories/Templates/GlobalHomepage/globalhome-page.scss
@@ -65,4 +65,5 @@
       margin-top: 7rem;
     }
   }
+  .no-gap{margin-left: -#{$spacing-04}; margin-right:-#{$spacing-04};}
 }
